fix(send to pane): SD-3235, SD-3257, SD-3291 Fixed some layout issues, responsive behavior of send to panel

--- a/client/app/scripts/superdesk-monitoring/styles/monitoring.less
+++ b/client/app/scripts/superdesk-monitoring/styles/monitoring.less
@@ -124,7 +124,7 @@
 
 #main-container {
     &.fetching {
-        .content-list {
+        .content-list, .list-pane > .content {
             right: 445px;
         }
     }
